--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,5 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Assets/TextMesh Pro/Fonts/jf-openhuninn-2.asset
+Assets/Scenes/MainScene.unity
+Assets/Scenes/MainScene.unity
